# deputy-on-track

./: .gitignore  Makefile  README.md  docker-compose-ci.yml  docker-compose.yml  env-template  nginx.conf  test.txt
.github/: pull_request_template.md
.github/events/: pull_request.json
.github/workflows/: pr_title_check.yml  run_uts.yml  stage_delivery.yml
authentication-server/: CMakeLists.txt  Makefile  main.c  main.cpp
authentication-server/src/: main.c
backend-fastapi/: Dockerfile  alembic.ini  pyproject.toml
backend-fastapi/app/: main.py  wait_db.py
backend-fastapi/app/api/: route_food.py
backend-fastapi/app/db/: config.py  database.py
backend-fastapi/app/models/: food.py
backend-fastapi/app/schemas/: food_schema.py
backend-fastapi/migrations/: env.py
backend-fastapi/migrations/versions/: 98143dcc6f32_migration_name.py
ci-example/: Cargo.toml  Dockerfile
ci-example/src/: lib.rs
client/: index.html
client/assets/: index-CII__W3Y.css  index-CRtDz_Cm.js  index-CxhOp5wP.css  index-Dgr4x3D_.js  index-Nv_SMsaL.js  index-OMxCxk1Z.js  index-ZgwYs29u.css
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts  zodAllias.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/entry-form/: EntryForm.tsx
frontend/src/components/entry-list/: EntryList.tsx
frontend/src/constants/: constants.ts
frontend/src/pages/: FoodPage.tsx
frontend/src/validator/: FoodValidator.ts
mock-server/: Cargo.toml  Dockerfile
mock-server/public/: index.html
mock-server/src/: main.rs
(+13 files in other folders)
