[project]
name = "my-back"
version = "0.1.0"
description = ""
authors = [
    {name = "'LonerLykos'",email = "'loner.lykos.project@gmail.com'"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asyncmy (>=0.2.10,<0.3.0)"
]

[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["LonerLykos <loner.lykos.project@gmail.com>"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
