[package]
name = "mock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.20"
env_logger = "0.11.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0.189", features = ["derive"] }
bcrypt = "0.17.0"
tower-http = { version = "0.6.1", features = ["cors"] }
utoipa = { version = "5.3.1" }  # Ensure the correct feature is used
utoipa-swagger-ui = { version = "9", features = ["axum"] }